--- a/.github/docker/Dockerfile-manylinux_x_y.template
+++ b/.github/docker/Dockerfile-manylinux_x_y.template
@@ -21,7 +21,7 @@
 #
 #     cd dlite  # cd to DLite root directory
 #     docker build -t dlite-manylinux \
-#         -f .github/docker/Dockerfile-manylinux_2_24_x86_64 .
+#         -f .github/docker/dockerfiles/Dockerfile-manylinux_2_24_x86_64 .
 #
 # Run (for debugging):
 #
@@ -38,6 +38,8 @@ FROM quay.io/pypa/manylinux{{ TYPE }}_{{ ARCH }}:latest
 ARG PY_MINORS="8 9 10 11 12"
 
 {{ EXTRA_PRE }}
+
+COPY requirements_full.txt requirements_dev.txt /tmp/
 
 # Enable rpmfusion for additional packages
 RUN \
@@ -58,13 +60,22 @@ RUN \
   # exist here.
   cd /opt/_internal && \
   tar -Jxvf static-libs-for-embedding-only.tar.xz && \
+  # Filter out challenging packages from requirements_full.txt
+  #sed \
+  #  -e '/pyarrow/d' \
+  #  -e '/tables/d' \
+  #  -e '/scikit-image/d' \
+  #  -i /tmp/requirements_full.txt && \
   # Install required Python packages
   mkdir -p /ci/pip_cache && \
   for minor in ${PY_MINORS}; do \
-    python3.${minor} -m pip install -U pip && \
-    python3.${minor} -m pip install -U setuptools wheel && \
-    python3.${minor} -m pip install -U --cache-dir /ci/pip_cache \
-      cmake oldest-supported-numpy; \
+    python3.${minor} -m pip install --cache-dir=/ci/pip_cache -U pip && \
+    python3.${minor} -m pip install --cache-dir=/ci/pip_cache \
+      -U setuptools wheel && \
+    python3.${minor} -m pip install --cache-dir=/ci/pip_cache \
+      oldest-supported-numpy \
+      -r /tmp/requirements_dev.txt \
+      -r /tmp/requirements_full.txt; \
   done && \
   rm -rf /ci/pip_cache
 
