Updated C implementation of protocol paths

--- a/bindings/python/paths.py.in
+++ b/bindings/python/paths.py.in
@@ -8,5 +8,6 @@ dlite_STORAGE_PLUGINS = '@dlite_STORAGE_PLUGINS@'
 dlite_MAPPING_PLUGINS = '@dlite_MAPPING_PLUGINS@'
 dlite_PYTHON_STORAGE_PLUGINS = '@dlite_PYTHON_STORAGE_PLUGINS@'
 dlite_PYTHON_MAPPING_PLUGINS = '@dlite_PYTHON_MAPPING_PLUGINS@'
+dlite_PYTHON_PROTOCOL_PLUGINS = '@dlite_PYTHON_PROTOCOL_PLUGINS@'
 dlite_TEMPLATES = '@dlite_TEMPLATES@'
 dlite_STORAGES = '@dlite_STORAGES@'
