--- a/src/pyembed/CMakeLists.txt
+++ b/src/pyembed/CMakeLists.txt
@@ -6,5 +6,6 @@ set(pyembed_sources
   pyembed/dlite-python-singletons.c
   pyembed/dlite-python-storage.c
   pyembed/dlite-python-mapping.c
+  pyembed/dlite-python-protocol.c
   PARENT_SCOPE
   )
