--- a/src/pyembed/CMakeLists.txt
+++ b/src/pyembed/CMakeLists.txt
@@ -2,6 +2,28 @@
 
 include(CheckCSourceCompiles)
 
+# Check if clock_settime (used by Python) need linking with -lrt
+set(CMAKE_REQUIRED_LINK_OPTIONS_save ${CMAKE_REQUIRED_LINK_OPTIONS})
+set(CMAKE_REQUIRED_LINK_OPTIONS "-lrt")
+check_c_source_compiles("
+#define _XOPEN_SOURCE 600
+#include <time.h>
+int main(void) {
+  clockid_t clock = CLOCK_REALTIME;
+  struct timespec ts;
+  clock_gettime(clock, &ts);
+  return 0;
+}" need_lrt)
+
+if(need_lrt)
+  message(STATUS "Adding -lrt to extra_link_libraries")
+  list(APPEND extra_link_libraries "-lrt")
+endif()
+
+set(CMAKE_REQUIRED_LINK_OPTIONS ${CMAKE_REQUIRED_LINK_OPTIONS_save})
+unset(CMAKE_REQUIRED_LINK_OPTIONS_save)
+unset(need_lrt)
+
 
 set(pyembed_sources
   pyembed/dlite-pyembed.c
