--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -4,9 +4,9 @@ project(dlite-tools C)
 # TODO - It would be preferable to link with the shared libraries.
 # How to do that without breaking the docker build?
 
-if(MSVC)  # XXX
-  unset(extra_link_libraries)
-endif()
+#if(MSVC)  # XXX
+#  unset(extra_link_libraries)
+#endif()
 
 # dlite-getuuid
 add_executable(dlite-getuuid dlite-getuuid.c)
@@ -22,18 +22,11 @@ target_include_directories(dlite-getuuid PRIVATE
 
 # dlite-codegen
 add_executable(dlite-codegen dlite-codegen.c)
-if(MSVC)  # XXX
-  target_link_libraries(dlite-codegen
-    dlite-static
-    dlite-utils-static
-  )
-else()
-  target_link_libraries(dlite-codegen
-    dlite-static
-    dlite-utils-static
-    ${extra_link_libraries}
-  )
-endif()
+target_link_libraries(dlite-codegen
+  dlite-static
+  dlite-utils-static
+  ${extra_link_libraries}
+)
 if(CMAKE_SIZEOF_VOID_P EQUAL 4)
   # Additional link libraries on 32-bit systems
   target_link_libraries(dlite-codegen m -pthread)
