--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -4,9 +4,9 @@ project(dlite-tools C)
 # TODO - It would be preferable to link with the shared libraries.
 # How to do that without breaking the docker build?
 
-#if(MSVC)  # XXX
-#  unset(extra_link_libraries)
-#endif()
+if(MSVC)  # Unset extra_link_libraries on MSVC to avoid linking against None.lib
+  unset(extra_link_libraries)
+endif()
 
 # dlite-getuuid
 add_executable(dlite-getuuid dlite-getuuid.c)
